Remove sample project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/Triangle/v15
+obj/
+[Bb]in
+[Dd]ebug*/
+[Rr]elease*/
